# LinkRag

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Jenkinsfile  ONBOARDING.md  README.md  alembic.ini  docker-compose.yml  project_info.md  pyproject.toml
.ai/prompts/: project.md
.ai/skills/: README.md
.claude/: doc-sync-rules.yaml  settings.local.json
.github/workflows/: acceptance-steps.yml  docs-sync.yml  migrations-check.yml
.specs/: README.md
configs/eval/: chunk_only.yaml  full_parse_chunk.yaml  multi_source_parser_evaluation.yaml  parser_mineru_only.yaml  parser_only.yaml
deploy/: docker-compose.yml
docs/: QUICKSTART.md  README.md  contributing.md  temp.md  多llm接入接口文档.md  多llm接入模块核心功能设计文档.md  多llm接入测试文档.md  多llm接入设计文档.md  文档切片模块技术文档.md  文档切片模块接口文档.md  文档切片模块测试文档.md
docs/ES入库手动重试/: brief.md
docs/ES入库重试机制/: acceptance.feature  brief.md  feature_info.md  implementation_report.md  technical_design.md
docs/HTML解析重构/: acceptance.feature  brief.md  feature_info.md  technical_design.md
docs/MQ消费死信兜底/: brief.md  feature_info.md  implementation_report.md  technical_design.md
docs/Word解析优化/: acceptance.feature  brief.md  feature_info.md  implementation_report.md  technical_design.md
docs/api/: error_codes.md  http_contracts.md  mq_contracts.md
docs/architecture/: README.md  chunking_module.md  evaluation_module.md  file_parser_module.md  llm_module.md  markdown_parser_module.md  mq_module.md  object_storage_module.md  parse_task_pipeline_module.md  pipeline_architecture.md  project_structure.md  vectorization_module.md
docs/conventions/: README.md  naming_conventions.md
docs/design/: README.md
docs/development/: README.md  branching_and_pr.md  (+8 more)
migrations/: README.md  db.sql  env.py
scripts/: benchmark_bge_m3_sparse.py  check_acceptance_steps.py  check_ai_links.py  check_docs_facts.py  check_docs_sync.py  check_skills.py  doc-sync-rules.yaml  flow-guard.py  init_kafka_topics.py  init_kafka_topics.sh  link37_realtest.py  promote_acceptance.py  setup_ai_links.py  setup_nltk_data.py  smoke_parse_pipeline.py
src/: config.py  database.py  main.py  nltk_bootstrap.py
tests/: README.md  conftest.py  test_connectivity.py
(+692 files in other folders)
