[project]
name = "tolink-rag"
version = "0.1.0"
description = "Retrieval Augmented Generation System"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "toLink Team", email = "team@tolink.com"}
]
keywords = ["rag", "retrieval", "llm", "ai", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.0.5",
    "unstructured>=0.11.0",
    "pdfplumber>=0.10.0",
    "PyMuPDF>=1.23.0",
    "pymupdf4llm>=1.27.2.2",
    "transformers>=4.53.0",
    "trafilatura>=1.6.0",
    "python-docx>=1.1.0",
    "chromadb>=0.4.22",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "sentence-transformers>=2.3.0",
    "redis>=5.0.0",
    "pymysql>=1.1.0",
    "aiomysql>=0.2.0",
    "SQLAlchemy[asyncio]>=2.0.0",
    "pymilvus>=2.3.0",
    "elasticsearch>=8.0.0,<9.0.0",
    "boto3>=1.34.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "cryptography>=42.0.0",
    "aiokafka>=0.11.0",
    "aio-pika>=9.4.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]
mq-kafka = [
    "aiokafka>=0.11.0",
]
mq-rabbitmq = [
    "aio-pika>=9.4.0",
]
mq-all = [
    "aiokafka>=0.11.0",
    "aio-pika>=9.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
